syntax = "proto3";

package scores.scoreupdate;

option go_package = "github.com/sdclarke/scores/pkg/proto/scoreupdate";

service Scorer {
  rpc UpdateScores(UpdateScoresRequest) returns (UpdateScoresResponse);
}

message UpdateScoresRequest {
  map<string, double> scores = 1;
  string turn = 2;
}

message UpdateScoresResponse {
  bool success = 1;
  map<string, double> mean_scores = 2;
  map<string, double> median_scores = 3;
  map<string, double> maximum_scores = 4;
}
